--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Abacus
 email: kronovet@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  I'm Daniel Kronovet, a junior data scientist living in New York City.
+  I'm Daniel Kronovet, a first-year data scientist living in New York City.
   This is my technical blog, where I write about software, information,
   and my experiences navigating professional life.
 baseurl: "" # the subpath of your site, e.g. /blog/
@@ -21,3 +21,7 @@ kramdown:
 
 drafts: True
 future: True
+paginate: 10
+
+disqus_short_name: kronosapiens
+disqus_show_comment_count: true
