--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 
 title: Abacus
 email: kronovet@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  I'm Daniel Kronovet, a data scientist in Tel Aviv.
+description: I'm Daniel Kronovet, an LA-based data scientist
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kronosapiens.github.io" # the base hostname & protocol for your site
 twitter_username: kronosapiens
