Reframe blog for Kronosapiens Labs

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 
-title: Abacus
+title: Kronosapiens Labs
 email: kronovet@gmail.com
-description: I'm Daniel Kronovet, an LA-based data scientist
+description: A technology consultancy
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kronosapiens.github.io" # the base hostname & protocol for your site
 twitter_username: kronosapiens
