--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Kronosapiens Labs
 email: kronovet@gmail.com
-description: A technology consultancy
+description: A technology company
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kronosapiens.github.io" # the base hostname & protocol for your site
 twitter_username: kronosapiens
